单独响  停摆

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/music_zhuyebeijing"
-    android:padding="15dp"
-    tools:context=".piano.MainActivity">
+    android:padding="15dp">
 
     <Button
         android:layout_width="0dp"
